# another

./: .gitignore  Cargo.toml  README.md  package.json  testfile.txt.sig
.cargo/: config.toml
.github/workflows/: release.yml
crates/another-core/: Cargo.toml
crates/another-core/src/: accessibility.rs  adb.rs  control.rs  lib.rs  macro_engine.rs  scrcpy.rs
crates/another-mcp/: Cargo.toml
crates/another-mcp/src/: lib.rs  main.rs  server.rs
skills/another-android/: SKILL.md
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: adb.rs  commands.rs  lib.rs  state.rs  video.rs
src/components/: MacrosScreen.tsx  MirrorScreen.tsx  SettingsDialog.tsx  WelcomeScreen.tsx
src/hooks/: useAdaptiveBitrate.ts  useConnection.ts  useDevices.ts  useMacro.ts  useUpdater.ts
