[package]
name = "Another"
version = "0.2.0"
description = "Android screen another and control"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
another-core = { path = "../crates/another-core" }
another-mcp = { path = "../crates/another-mcp" }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
anyhow = "1"
rodio = { version = "0.19", default-features = false }
