[package]
name = "another-mcp"
version = "0.2.0"
edition = "2021"

[lib]
name = "another_mcp"
path = "src/lib.rs"

[[bin]]
name = "another-mcp"
path = "src/main.rs"

[dependencies]
another-core = { path = "../another-core" }
rmcp = { version = "1.3", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
tokio-util = "0.7"
